@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-07-01T16:17:07Z",
-  "count" : 3,
-  "count_minmax" : [ 1, 3 ],
-  "count_decinc" : [ -0, +3 ],
+  "timestamp" : "2022-07-02T01:01:49Z",
+  "count" : 4,
+  "count_minmax" : [ 1, 4 ],
+  "count_decinc" : [ -0, +4 ],
   "uniques" : 2,
   "uniques_minmax" : [ 1, 2 ],
   "uniques_decinc" : [ -0, +2 ]
