@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-07-01T16:17:07Z",
+  "timestamp" : "2022-07-02T01:01:49Z",
   "count_outdated" : 370,
   "uniques_outdated" : 200,
-  "count" : 393,
+  "count" : 394,
   "uniques" : 214,
   "clones" : [
     {
@@ -91,8 +91,8 @@
     },
     {
       "timestamp": "2022-07-01T00:00:00Z",
-      "count": 3,
-      "count_minmax": [ 1, 3 ],
+      "count": 4,
+      "count_minmax": [ 1, 4 ],
       "uniques": 2,
       "uniques_minmax": [ 1, 2 ]
     }
