@@ -1,5 +1,5 @@
 {
-  "count": 23,
+  "count": 24,
   "uniques": 2,
   "clones": [
     {
@@ -64,7 +64,7 @@
     },
     {
       "timestamp": "2022-07-01T00:00:00Z",
-      "count": 3,
+      "count": 4,
       "uniques": 2
     }
   ]
