@@ -1,3 +1,10 @@
+2022-07-02T01:01:49Z:
+* notice: last 14d: unq all: 2 24
+* notice: prev accum: outdated-unq outdated-all / unq all: 200 370 / 214 393
+* notice: next accum: outdated-unq outdated-all / unq all: 200 370 / 214 394
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +2 +4 -0 -0 / 2 4
+* notice: removed / changed dates: [] / [2022-07-01]
+
 2022-07-01T16:17:07Z:
 * notice: last 14d: unq all: 2 23
 * notice: prev accum: outdated-unq outdated-all / unq all: 199 369 / 213 391
